Add JavaDoc to script related classes. Tidy up script related test classes.